2019-07-30  Jason Merrill  <jason@redhat.com>

	PR c++/90538 - multiple expansions of capture packs
	* cp-tree.h (DECLTYPE_FOR_INIT_CAPTURE): Remove.
	* lambda.c (add_capture): Copy parameter packs from init.
	(lambda_capture_field_type): Always use auto for init-capture.
	* pt.c (uses_parameter_packs): Return tree.
	(tsubst) [DECLTYPE_TYPE]: Remove init-capture handling.
	(gen_elem_of_pack_expansion_instantiation): Don't push
	local_specialization_stack.
	(prepend_one_capture): New.
	(tsubst_lambda_expr): Use it.  Don't touch local_specializations.
	(do_auto_deduction): Avoid redundant error.

2019-07-29  Jason Merrill  <jason@redhat.com>

	Fix copy_node of TEMPLATE_INFO.
	* cp-tree.h (struct tree_template_info): Use tree_base instead of
	tree_common.  Add tmpl and args fields.
	(TI_TEMPLATE, TI_ARGS): Adjust.

2019-07-30  Andrew Sutton  <asutton@lock3software.com>

	Provide a better source location for introduction errors.
	* cp-tree.h (finish_template_introduction): Accept a location...
	* constraint.cc (finish_template_introduction) ...and use it.
	* parser.c (cp_parser_template_introduction): Build the location
	over the concept name and introduction list.

2019-07-30  Andrew Sutton  <asutton@lock3software.com>

	Fix an ICE when failing to match template member classes. Also,
	note the original declaration when failing.
	* constraint.cc (associate_classtype_constraints): Note the original
	declaration. Don't return error_mark_node in order to avoid an
	assertion later.

2019-07-30  Andrew Sutton  <asutton@lock3software.com>

	Catch type errors in requires-clauses.
	* constraint.cc (known_non_bool_p): New.
	(check_constraint_operands): New.
	(check_constraint_atom): New.
	(finish_constraint_binary_op): Take and return cp_exprs instead of
	trees; check operand types.
	(finish_constraint_or_expr): Take and return cp_exprs instead of trees.
	(finish_constraint_and_expr): Likewise.
	(finish_constraint_primary_expr): Likewise.